[package]
name = "bevy_volleyball"
edition = "2024"
version.workspace = true
authors.workspace = true
publish = false

[dependencies]
bevy = { version = "0.17.3", default-features = false, features = [
  "asset_processor",
  "bevy_asset",
  "bevy_audio",
  "bevy_camera",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui_render",
  "bevy_window",
  "bevy_winit",
  "png",
  "webgl2",
  "x11",
  "zstd_c",
  "bevy_dev_tools",
  "mp3",
  "wav",
] }
rand = "0.9.2"
winit = "0.30.12"
image = "0.25.9"